<resources>
    <string name="app_name" translatable="false">CREA Wallet</string>
    <string name="available_amount">Balance</string>
    <string name="bitcoin_address">Creativecoin address</string>
    <string name="blockchain_download">Blockchain download</string>
    <string name="synchronization_in_progress">Synchronization in progress</string>
    <string name="synchronization_completed">Synchronization completed!</string>
    <string name="notif_cash_in">You have received %1$s from %2$s.</string>
    <string name="notif_accumulated_amount">You have received %1$s in %2$d transactions.</string>
    <string name="notif_cash_in_title">You have received %1$s.</string>
    <string name="broadcasting_transaction">Broadcasting transaction</string>
    <string name="want_to_send_payment">You want to send a payment of %1$s to %2$s, with a fee %3$s?</string>
    <string name="new_btc_payment">New CREA Payment</string>
    <string name="new_transaction">New transaction</string>
    <string name="new_transaction_message">Preparing transaction…</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="wrong_pin_message">It has been impossible to decrypt the wallet. Is %1$s the PIN that you used to encrypt the wallet?</string>
    <string name="insufficient_money">Insufficient money</string>
    <string name="insufficient_money_text">Heyy! you need %1$s more to sent this payment.</string>
    <string name="wallet_action_cash_in">Show Cash In address</string>
    <string name="scan_payment">Scan payment</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="generating_seed">Generating seed…</string>
    <string name="generating_wallet">Generating wallet…</string>
    <string name="wallet_generated_correctly">Wallet generated correctly!</string>
    <string name="mnemonic_code">Mnemonic code</string>
    <string name="mnemonic_code_list">Copy this list of words and store them in a safe place. The order of the words is important. This list serves so that you can generate your wallet if you lose or change your device. Is in your hands the safety of your money.\n\n %1$s</string>
    <string name="create_pin">Create a PIN</string>
    <string name="create_pin_message">Great! Only need to encrypt your wallet. We\'re going to encrypt your wallet with a 4-digit PIN. Once encrypted your wallet, no one except one who knows this PIN can send money. There is No way to retrieve the PIN if you lose, so make sure to being to remember or you will lose your money.</string>
    <string name="encrypting_wallet">Encrypting wallet…</string>
    <string name="encrypt_wallet_success">Your wallet has been encrypted without problems!</string>
    <string name="enter_btc_address">Please enter the Creativecoin address of destination</string>
    <string name="addressee">Addressee</string>
    <string name="amount">Amount</string>
    <string name="amount_in_currency">Amount in %1$s</string>
    <string name="send_all">Send all of my money</string>
    <string name="transaction_fee_of">This transaction has a commission of %1$s</string>
    <string name="amount_too_small">The amount is too small to be sent</string>
    <string name="enter_valid_amount">Enter a valid amount in %1$s</string>
    <string name="empty_error_field">This field can\'t be empty</string>
    <string name="action_scan">Scan QR</string>
    <string name="no_sufficient_money">You don\'t have enough money Your are missing %1$s</string>
    <string name="not_found_valid_data">Not found valid data</string>
    <string name="bad_pn_too_many_times">You have entered the pin incorrectly too many times.</string>
    <string name="prepared_transaction">The transaction is ready to be sent. You will need to provide your PIN to sign the transaction.</string>
    <string name="signing_transaction">Signing the transaction…</string>
    <string name="sending_transaction">Sending the transaction…</string>
    <string name="transaction_sent">The transaction has been sent!</string>
    <string name="transaction_failed">There has been an error!</string>
    <string name="transaction_rejected">The transaction has been rejected by most nodes!</string>
    <string name="invalid_encryption_key">Has not been able to sign the transaction because the signature key is invalid.</string>
    <string name="already_spent_funds">There are other transactions pending that have already spent the funds.</string>
    <string name="details">Details</string>
    <string name="confirmations">Confirmations</string>
    <string name="sender">Sender</string>
    <string name="amount_dots">Amount:</string>
    <string name="fee">Fee:</string>
    <string name="transaction_hash">TX Hash</string>
    <string name="copy_address">Copy address</string>
    <string name="edit_address">Edit address</string>
    <string name="show_qr">Show QR</string>
    <string name="send_bitcoin">Send coins</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard!</string>
    <string name="address_label">Address label</string>
    <string name="contacts_addresses">Contacts</string>
    <string name="wallet_addresses">My addresses</string>
    <string name="address_book">Address book</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_globally">Enable notifications globally</string>
    <string name="reset_blockchain">Reset blockchain</string>
    <string name="not_recommended">Not recommended</string>
    <string name="advanced_options">Advanced options</string>
    <string name="transaction_fees">Transaction fees</string>
    <string name="settings">Settings</string>
    <string name="blockchain_restarting">Restarting blockchain…</string>
    <string name="restart_blockchain">Restart blockchain</string>
    <string name="delete_blockchain_warning">If you activate this option you will delete all downloaded data in your wallet, including the transactions of the Creativecoin received. Once enabled, your wallet will synchronize with the network Creativecoin download all blocks that exist in the Creativecoin network. This process will cost several minutes, depending on your network connection. We recommend you to download only by wifi. Do you want to enable this option anyway?</string>
    <string name="export_seed">Export seed</string>
    <string name="getting_mnemonic_code">Getting mnemonic code…</string>
    <string name="to_qr_code">To QR code</string>
    <string name="without_name">Without name</string>
    <string name="network_fee">Network fee</string>
    <string name="welcome_title">Welcome to your new Creativechain wallet</string>
    <string name="what_is_bitcoin">
        \tCreativechain is a decentralized platform for the registration and distribution of content that certifies the authorship and license of any work or creation making them indelible. A tool for the empowerment of artists and all kinds of creative people who produce, share and distribute digital content. The platform applies the power of attorney of the revolutionary Blockchain technology in the process of registering content to create incorruptible time stamps that certify the intellectual property of any digital work.</string>
    <string name="welcome_start">As you want to start?</string>
    <string name="create_new_wallet">New wallet</string>
    <string name="create_new_wallet_explain">Create a new wallet with new addresses</string>
    <string name="generate_existing_wallet">Existing wallet</string>
    <string name="generate_existing_wallet_explain">Creates a wallet from list of words.</string>
    <string name="invalid_bitcoin_address">Invalid Creativecoin address</string>
    <string name="broadcasting_transaction_in_nodes">Broadcasting transaction in %1$d Creativecoin nodes.</string>
    <string name="transactions_not_found">We have not found any transactions</string>
    <string name="transactions_not_found_explain">Up to now we have not found any incoming transactions or outgoing of this wallet.</string>
    <string name="addresses_not_found">No addresses were found</string>
    <string name="address_not_found_explain">Click on the button below to add a Creativecoin address to the list.</string>
    <string name="delete">Delete</string>
    <string name="transaction_fees_explain">Commission of transactions per KB. Transactions with commissions low and takes longer to be confirmed.</string>
    <string name="export_seed_explain">Extract the code mnemonic of the wallet (list of words).</string>
    <string name="sync_time">Sync… %1$s </string>
    <string name="exchange_currency">Exchange currency</string>
    <string name="exchange_currency_explain">Currency exchange used to show the value of your Creativecoins.</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="transaction_fee">Transaction fee</string>
    <string name="disconnect_idle_detected">Disconnect when idle is detected</string>
    <string name="disconnect_idle_detected_summary">It disconnects from the network when it detects inactivity. It reconnects automatically after 15 minutes.</string>
    <string name="price" translatable="false">1 CREA =  %1$s</string>
    <string name="show_exchange_value">Show exchange value</string>
    <string name="show_exchange_value_summary">Displays the exchange value on the main screen.</string>
    <string name="ui_interface">Interface</string>
    <string name="coin_settings">Wallet settings</string>
    <string name="price_update_interval">Update exchange price…</string>
    <string name="crea_address">Creativecoin address</string>
    <string name="send">Send</string>
    <string name="allow_spent_unconfirmed_tx">Allow spending unconfirmed transactions</string>
    <string name="allow_spent_unconfirmed_tx_summary">Allows sending money from transactions that are not yet confirmed.</string>
    <string name="economic_fee">Economic</string>
    <string name="normal_fee">Normal</string>
    <string name="priority_fee">Priority</string>
    <string name="wallet_creation_date">Creation date</string>
    <string name="skip">Skip</string>
    <string name="wallet_creation_time_text">Do you remember the date you created this wallet? Synchronization can be much faster if you indicate the date. If you are not sure you can skip this step.</string>
    <string name="indicate_words_language">Indicates the language of the words</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="check_address_tool_explain">This function allows you to check if a CREA address belongs to this wallet. It is useful when you do not know if a transaction address is in your wallet. Of course, paper wallet addresses will never belong in your wallet.</string>
    <string name="address_to_check">Address to check</string>
    <string name="address_not_found">No address detected</string>
    <string name="check_address">Check address</string>
    <string name="network_monitor">Network monitor</string>
    <string name="swap_welcome">Last 19th Feb 2019 @ 12:00 CET there was a swap of the Creativecoin blockchain. This means that a new blockchain (CREA Network) with a different structure has been created. CREA 1.0 owners can exchange their coins to CREA 2.0. The coins you have in this wallet will be sent to the new network at 1:1 ratio. To start this process it is necessary to create a user account in the new network to be able to claim your CREA 2.0 coins. You can create a @user in the dapp https://creary.net/welcome.\n\n
        For further information about the migration process, please check this link: https://creaproject.io/crea-2-swap-en/</string>
    <string name="swap_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>