<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ui.LoggedHomeActivity">

    <item
        android:id="@+id/action_cash_in"
        android:title="@string/wallet_action_cash_in"
        android:icon="@drawable/ic_qr_code"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_cash_out"
        android:title="@string/send_bitcoin"
        android:icon="@drawable/send"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_address_book"
        android:title="@string/address_book"
        android:icon="@drawable/ic_import_contacts"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_check_address"
        android:title="@string/check_address"
        android:icon="@drawable/ic_search"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_network"
        android:title="@string/network_monitor"
        android:icon="@drawable/ic_network_monitor"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />
</menu>