<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/login_background">

    <me.kaede.tagview.TagView
        android:id="@+id/seed"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"/>

    <me.kaede.tagview.TagView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal" />

    <crea.wallet.lite.widget.keyboard.TextKeyboard
        android:id="@+id/text_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/english"
        android:orientation="vertical">

        <crea.wallet.lite.widget.FontTextView
            android:id="@+id/fontTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/indicate_words_language"
            android:textColor="@android:color/white"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@android:color/white"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:textColor="@android:color/white"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:textColor="@android:color/white"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/italian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italian"
            android:textColor="@android:color/white"
            android:textSize="18dp"/>
    </RadioGroup>
</LinearLayout>