<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="crea.wallet.lite.ui.tool.CheckAddressActivity">

    <crea.wallet.lite.widget.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_address_tool_explain"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_to_check"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <crea.wallet.lite.widget.FontTextView
        android:id="@+id/check_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:font="roboto_bold"
        android:textSize="18dp"
        android:text="@string/address_not_found"/>
</LinearLayout>
